--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 FalconBrickDemo.xcodeproj/project.xcworkspace/xcuserdata/edbios001.xcuserdatad/UserInterfaceState.xcuserstate
+FalconBrickDemo.xcodeproj/xcuserdata/edbios001.xcuserdatad/xcschemes/xcschememanagement.plist
